Add endpoint for machine to check its own access token validity
